...
        android:minLines="4"
        android:gravity="top|left"
        android:maxLines="4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
            android:id="@+id/litterMessage"
            android:textColor="#ffffff"
            android:background="#90000000"
            android:hint="Got some garbage to toss?"
            android:padding="5pt"
            android:layout_marginBottom="4pt" />

...

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#B02193ff"
                    android:id="@+id/postLitter"
                    android:clickable="true"
                    android:padding="3pt">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
