...
                android:gravity="center">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_button_text"
                    android:id="@+id/sign_in_button"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:enabled="true"
                    android:background="#B02193ff" />

                <Space
...
