...
                                android:background="#B02193ff"
                                android:id="@+id/buttonBar">

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/litterButton"
                                    android:clickable="false"
                                    android:layout_marginLeft="5pt"
                                    android:layout_marginRight="5pt"
                                    android:layout_gravity="center"
                                    android:src="@drawable/post_icon"
                                    android:background="@android:color/transparent"
...
